--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
   flutter_svg: ^0.18.1
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
