--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -44,6 +44,12 @@ jobs:
       # Build apk.
       - run: flutter build apk
 
+      # Install Copywriter
+      - run: pub global activate copywriter
+
+      # Dry run Copywriter
+      - run: copywriter -d
+
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
         with:
