fix: testing copywriter

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -29,20 +29,20 @@ jobs:
           channel: "stable" # 'dev', 'alpha', default to: 'stable'
           # flutter-version: '1.12.x' # you can also specify exact version of flutter
 
-      # Get flutter dependencies.
-      - run: flutter pub get
+      # # Get flutter dependencies.
+      # - run: flutter pub get
 
-      # Check for any formatting issues in the code.
-      - run: flutter format --set-exit-if-changed .
+      # # Check for any formatting issues in the code.
+      # - run: flutter format --set-exit-if-changed .
 
-      # Statically analyze the Dart code for any errors.
-      - run: flutter analyze .
+      # # Statically analyze the Dart code for any errors.
+      # - run: flutter analyze .
 
-      # Run widget tests for our flutter project.
-      - run: flutter test
+      # # Run widget tests for our flutter project.
+      # - run: flutter test
 
-      # Build apk.
-      - run: flutter build apk
+      # # Build apk.
+      # - run: flutter build apk
 
       # Install Copywriter
       - run: pub global activate copywriter
