--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -25,33 +25,34 @@ jobs:
 
       # Setup the flutter environment.
       - uses: subosito/flutter-action@v1
+      - uses: dart-lang/setup-dart@v0.1
         with:
           channel: "stable" # 'dev', 'alpha', default to: 'stable'
           # flutter-version: '1.12.x' # you can also specify exact version of flutter
 
-      # Get flutter dependencies.
-      - run: flutter pub get
+      # # Get flutter dependencies.
+      # - run: flutter pub get
 
-      # Check for any formatting issues in the code.
-      - run: flutter format --set-exit-if-changed .
+      # # Check for any formatting issues in the code.
+      # - run: flutter format --set-exit-if-changed .
 
-      # Statically analyze the Dart code for any errors.
-      - run: flutter analyze .
+      # # Statically analyze the Dart code for any errors.
+      # - run: flutter analyze .
 
-      # Run widget tests for our flutter project.
-      - run: flutter test
+      # # Run widget tests for our flutter project.
+      # - run: flutter test
 
-      # Build apk.
-      - run: flutter build apk
+      # # Build apk.
+      # - run: flutter build apk
 
-      # Install Copywriter
+      # # Install Copywriter
       - run: pub global activate copywriter
 
-      # Dry run Copywriter
+      # # Dry run Copywriter
       - run: copywriter -d
 
-      # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+      # # Upload generated apk to the artifacts.
+      # - uses: actions/upload-artifact@v1
+      #   with:
+      #     name: release-apk
+      #     path: build/app/outputs/apk/release/app-release.apk
