--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -39,13 +39,13 @@ jobs:
       - run: flutter analyze .
 
       # Run widget tests for our flutter project.
-      - run: flutter test
+      # - run: flutter test
 
       # Build apk.
-      - run: flutter build apk
+      # - run: flutter build apk
 
-      # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+      # # Upload generated apk to the artifacts.
+      # - uses: actions/upload-artifact@v1
+      #   with:
+      #     name: release-apk
+      #     path: build/app/outputs/apk/release/app-release.apk
