--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
-  flutter_svg: ^0.18.1
+  flutter_svg: ^0.20.0-nullsafety.3
   firebase_core: ^0.7.0
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.20.0
