feat: cloud firestore working

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="knowyourdonor"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY" 
+          android:value=""/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
