feat: added url launch and other improvements

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="knowyourdonor"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY" 
-          android:value=""/>
+          android:value="AIzaSyCRI6XggOjexcbfIjTqaE79rsLSb-xgsH0"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
