--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
   flutter_svg: ^0.20.0-nullsafety.3
+  font_awesome_flutter: ^8.12.0
   google_maps_flutter: ^2.0.1
   firebase_core: ^0.7.0
   firebase_analytics: ^5.0.2
@@ -25,6 +26,7 @@ dependencies:
   carousel_slider: ^3.0.0
   geocoding: ^1.0.5
   geolocator: ^6.2.0
+  url_launcher: ^5.0.0
 
 dev_dependencies:
   flutter_test:
